--- a/0a_Abschlussbericht/src/einleitung.tex
+++ b/0a_Abschlussbericht/src/einleitung.tex
@@ -1,4 +1,12 @@
 \chapter{Einleitung}
 
-gegeben: 	$ x(t) $, $ u(t) $ aus Flugmessdaten, Struktur der lin. Modelle (Längs- und Seitenbewegung)
-gesucht: 	Parameter der lin. Modelle
+In der vorliegenden Arbeit geht es darum, aus vorliegenden Flugmessdaten des e-Genius 1:3-Modells die Parameter 
+linearisierter Modelle der Längs- und Seitenbewegung zu identifizieren. Dazu werden Verfahren im Frequenz- und im Zeitbereich 
+verwendet, um die Ergebnisse vergleichen zu können.
+
+- wichtige Rolle in der Regelungstechnik: liefert Modell der Regelstrecke
+
+	o gegeben: 	$ x(t) $, $ u(t) $ aus Flugmessdaten, Struktur der lin. Modelle (Längs- und Seitenbewegung)
+	o gesucht: 	Parameter der lin. Modelle
+
+- 
