--- a/0a_Abschlussbericht/src/frequenzbereich.tex
+++ b/0a_Abschlussbericht/src/frequenzbereich.tex
@@ -25,9 +25,9 @@ Zustandsraummodell ergibt sich wie folgt \cite{Klein2006}:
 	\end{split}
 \end{align}
 
-Hier bezeichnen $ \tilde{x} $, $ \tilde{u} $ und $ \tilde{y} $ die Fourier-Transformation des Zustands-, Steuer bzw. 
-Ausgangsvektors. $ \omega_k=2\pi f_k=2\pi k/T $ ist die Kreisfrequenz und $ \mathbf{G}(k,\theta) $ die Übertragungsfunktion 
-einer Frequenz $ f_k $ abhängig vom Parametervektor $ \theta $.
+Hier bezeichnen $ \mathbf{\tilde{x}} $, $ \mathbf{\tilde{u}} $ und $ \mathbf{\tilde{y}} $ die Fourier-Transformation des 
+Zustands-, Steuer bzw. Ausgangsvektors. $ \omega_k=2\pi f_k=2\pi k/T $ ist die Kreisfrequenz und $ \mathbf{G}(k,\theta) $ die 
+Übertragungsfunktion einer Frequenz $ f_k $ abhängig vom Parametervektor $ \theta $.
 
 
 \section{\textit{Output Error}-Methode}
@@ -67,12 +67,14 @@ Morelli \cite{Klein2006} die negative Log-Likelihood-Funktion mithilfe des Ansat
 (\ref{eq:Output_Error}):
 
 \begin{equation}
-    J(\mathbf{\theta})=N \sum\limits_{k=0}^{N-1}\mathbf{\tilde{\nu}}^H(k,\mathbf{\theta})\mathbf{S_{\nu\nu}^{-1}}\mathbf{\tilde{\nu}}(k,\mathbf{\theta})+Nln|\mathbf{S_{\nu\nu}}|
+    J(\mathbf{\theta})=N 
+    \sum\limits_{k=0}^{N-1}\mathbf{\tilde{\nu}}^H(k,\mathbf{\theta})\mathbf{S_{\nu\nu}^{-1}}\mathbf{\tilde{\nu}}(k,\mathbf{\theta})+N
+     \ln{\left|\mathbf{S_{\nu\nu}}\right|}
 	\label{eq:Kostenfunktion}
 \end{equation}  
 
-Die Matrix $S_{\nu\nu}$ gewichtet die Messfehler der einzelnen Steuergrößen auf die Zustandsgrößen. 
-Wie bereits beschrieben, geht es nun darum das Minimum dieser Kostenfunktion zu finden. Wir suchen also die Nullstelle ihrer 
+Die Matrix $\mathbf{S_{\nu\nu}}$ gewichtet die Messfehler der einzelnen Steuergrößen auf die Zustandsgrößen. 
+Wie bereits beschrieben, geht es nun darum, das Minimum dieser Kostenfunktion zu finden. Wir suchen also die Nullstelle ihrer 
 Ableitung. Einer der wichtigsten Algorithmen zur Bestimmung von Nullstellen (nicht)-linearer Funktionen sowohl bei 
 Eingrößenproblemen als auch bei Mehrgrößenproblemen ist der iterative \textit{Newton-Raphson}-Algorithmus. Dabei wird die 
 Nullstelle 
@@ -94,21 +96,24 @@ Diese Vorschrift lässt sich umformulieren für einen mehrdimensionalen Funktion
 
  \begin{equation}
 	\underbrace{\begin{pmatrix}
-	\frac{\delta f_{1}}{\delta x_{1}} & \frac{\delta f_{1}}{\delta x_{2}} & ... & \frac{\delta f_{1}}    		{\delta x_{n}}\\
-	\frac{\delta f_{2}}{\delta x_{1}} & \frac{\delta f_{2}}{\delta x_{2}} & ... & \frac{\delta f_{2}}			{\delta x_{n}}\\
-	... & ... & ... & ...\\
-	\frac{\delta f_{n}}{\delta x_{1}} & \frac{\delta f_{n}}{\delta x_{2}} & ... & \frac{\delta f_{n}}			{\delta x_{n}}\\
+	\frac{\partial f_{1}}{\partial x_{1}} & \frac{\partial f_{1}}{\partial x_{2}} & \cdots & \frac{\partial f_{1}}    		
+	{\partial x_{n}}\\
+	\frac{\partial f_{2}}{\partial x_{1}} & \frac{\partial f_{2}}{\partial x_{2}} & \cdots & \frac{\partial f_{2}}			
+	{\partial x_{n}}\\
+	\vdots & \vdots & \ddots & \vdots\\
+	\frac{\partial f_{n}}{\partial x_{1}} & \partial{\delta f_{n}}{\partial x_{2}} & \cdots & \frac{\partial f_{n}}			
+	{\partial x_{n}}\\
 	\end{pmatrix}^{i}}_{\substack{\mathbf{J^{i}}}}
 	\underbrace{\begin{pmatrix}
 	\Delta x_{1}\\
 	\Delta x_{2}\\
-	...\\
+	\vdots\\
 	\Delta x_{n}\\
 	\end{pmatrix}^{i+1}}_{\substack{\Delta \mathbf{X^{i+1}}}} = -
 	\underbrace{\begin{pmatrix}
 	f_{1}\\
 	f_{2}\\
-	...\\
+	\vdots\\
 	f_{n}\\
 	\end{pmatrix}^{i}}_{\substack{\mathbf{F^{i}}}}
 	\label{eq:Newton_Raphson_MIMO}
@@ -126,8 +131,8 @@ unser Problem umschreiben:
 
 \begin{align}
 	\begin{split}
-		\Delta \mathbf{\theta}^{i+1} &= -\left(\left[  \frac{\delta^{2}J}{\delta \mathbf{\theta} \delta 
-		\mathbf{\theta^T}}\right]^{-1} \right)^{i} \cdot \left(\frac{\delta J}{\delta \mathbf{\theta}}\right)^{i} \\
+		\Delta \mathbf{\theta}^{i+1} &= -\left(\left[  \frac{\partial^{2}J}{\partial \mathbf{\theta} \partial 
+		\mathbf{\theta^T}}\right]^{-1} \right)^{i} \cdot \left(\frac{\partial J}{\partial \mathbf{\theta}}\right)^{i} \\
 		\theta^{i+1} &= \theta^{i} + \Delta\theta^{i+1}
 		\label{eq:Newton_Raphson_2}
 	\end{split}
@@ -137,12 +142,12 @@ In jedem Iterationsschritt muss also ein lineares Gleichungssystem gelöst werde
 des Algorithmus ist die Berechnung der Ableitungen und der Hesse-Matrix in jedem Iterationsschritt. Diese können bei vielen 
 zu schätzenden Parametern schnell sehr kompliziert werden. Da die Kostenfunktion als Summe über alle Frequenzen berechnet 
 wird (siehe \cref{eq:Kostenfunktion}), gilt dies auch für die Ableitungen. Dadurch wird zusätzliche Rechenzeit 
-beansprucht. Der Algorithmus ist in Abbildung \ref{fig:Newton_Raphson} nochmals übersichtlich dargestellt.  
+beansprucht. Der Algorithmus ist in \cref{fig:Newton_Raphson} nochmals übersichtlich dargestellt.  
 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.6\linewidth]{Newton_Raphson.png}
-	\caption{Newton-Raphson Algorithmus für die OEM.}
+	\caption{\textit{Newton-Raphson}-Algorithmus für die OEM}
 	\label{fig:Newton_Raphson}
 \end{figure}
 
@@ -170,20 +175,48 @@ Signal. Dies stellte sich bei den vorliegenden Daten jedoch nicht als Problem he
 
 \section{Ergebnisse}
 
-Abschließend will das folgende Kapitel noch einen kurzen Einblick in die Ergebnisse der Parameterschätzung im Frequenzbereich geben. In Abbildung \ref{fig:Ergebnisse_f} sind sowohl die geschätzten Frequenzverläufe als auch die originalen Frequenzverläufe dargestellt. Beim Blick auf die originalen Daten (in Rot dargestellt) fällt der erwartete Trend ins Auge. Die Übertragung findet hauptsächlich im Bereich niedriger Frequenzen statt. Die Verläufe knicken für große Frequenzen ab. Ausnahme ist die Nickrate $q$. Da wir allerdings nur die Bewegung während der Platzrunde betrachten liegt $q$ nahe bei 0 und wird hauptsächlich vom Messrauschen bestimmt. Dies könnte den Anstieg bei hohen Frequenzen erklären. Um ein besserer Bild vom Übertragungsverhalten von $q$ zu bekommen müsste beispielsweiße im Bereich der Anstellwinkelschwingung geflogen werden. Aus dem Newton-Raphson Algorithmus erhält man eine Abschätzung des Parametervektors $\theta$ und damit auch eine Abschätzung der Übertragungsmatrix $G(\theta)$. Mithilfe von $G(\theta)$ und den gemessenen Steuergrößen lässt sich ein geschätzter Frequenzverlauf der Zustandsgrößen berechnen. Dieser ist ebenfalls in Abb. \ref{fig:Ergebnisse_f} eingezeichnet. Es zeigt sich, dass die Frequenzverläufe im Allgemeinen gut getroffen werden. Teilweise werden Ausschläge sogar exakt getroffen (siehe Verlauf von $q$ im niedrigen Frequenzbereich). Das häufigstes Problem, das wir beobachten konnten, war allerdings das Überschätzen bzw. Unterschätzen der Ausgangsverläufe. Deutlich zu sehen ist das im Verlauf der Geschwindigkeit $V_{A}$. Ein Grund könnten die unterschiedlichen Größenordnungen der Zustandsgrößen sein. Dies würde erklären warum die Geschwindigkeit, mit der größten nominellen Abweichung vom Trimmpunkt, unterschätzt wird. Eine Normalisierung der Zustandsgrößen wäre deshalb ein möglicher Ansatz zur Verbesserung der Ergebnisse (siehe Kapitel \ref{chapter:Zusammenfassung}). 
+Abschließend will das folgende Kapitel\todo{will das folgende Kapitel => soll der folgende Abschnitt} noch einen kurzen 
+Einblick in die Ergebnisse der Parameterschätzung im Frequenzbereich geben. In \cref{fig:Ergebnisse_f} sind sowohl die 
+geschätzten Frequenzverläufe als auch die originalen Frequenzverläufe dargestellt. Beim Blick auf die originalen Daten (in 
+rot dargestellt) fällt der erwartete Trend ins Auge. Die Übertragung findet hauptsächlich im Bereich niedriger Frequenzen 
+statt. Die Verläufe knicken für große Frequenzen ab. Ausnahme ist die Nickrate $q$. Da wir allerdings nur die Bewegung 
+während der Platzrunde betrachten, liegt $q$ nahe bei $ 0 $ und wird hauptsächlich vom Messrauschen bestimmt. Dies könnte den 
+Anstieg bei hohen Frequenzen erklären. Um ein besseres Bild vom Übertragungsverhalten von $q$ zu bekommen, müsste 
+beispielsweiße im Bereich der Anstellwinkelschwingung geflogen werden. \todo{Erklärung zu Frequenzverläufen an Anfang 
+stellen?}Aus dem \textit{Newton-Raphson}-Algorithmus erhält man 
+eine Abschätzung des Parametervektors $\theta$ und damit auch eine Abschätzung der Übertragungsmatrix $G(\theta)$. Mithilfe 
+von $G(\theta)$ und den gemessenen Steuergrößen lässt sich ein geschätzter Frequenzverlauf der Zustandsgrößen berechnen. 
+Dieser ist ebenfalls in Abb. \ref{fig:Ergebnisse_f} eingezeichnet. Es zeigt sich, dass die Frequenzverläufe im Allgemeinen 
+gut getroffen werden. Teilweise werden Ausschläge sogar exakt getroffen (siehe Verlauf von $q$ im niedrigen Frequenzbereich). 
+Das häufigsts Problem, das wir beobachten konnten, war allerdings das Überschätzen bzw. Unterschätzen der Ausgangsverläufe. 
+Deutlich zu sehen ist das im Verlauf der Geschwindigkeit $V_{A}$. Ein Grund könnten die unterschiedlichen Größenordnungen der 
+Zustandsgrößen sein. Dies würde erklären warum die Geschwindigkeit, mit der größten nominellen Abweichung vom Trimmpunkt, 
+unterschätzt wird. Eine Normalisierung der Zustandsgrößen wäre deshalb ein möglicher Ansatz zur Verbesserung der Ergebnisse 
+(siehe Kapitel \ref{chapter:Zusammenfassung}). 
 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[trim=100 0 100 0,clip,width=1\linewidth]{Ergebnisse_Frequenzbereich.png}
-	\caption{Frequenzverläufe der vier Zustandsgrößen der Längsbewegung. In Rot sind die Frequenzverläufe der Messdaten und in Blau die Frequenzverläufe des geschätzten Modells dargestellt.}
+	\caption{Frequenzverläufe der vier Zustandsgrößen der Längsbewegung: in rot sind die Frequenzverläufe der Messdaten und 
+	in blau die Frequenzverläufe des geschätzten Modells dargestellt}
 	\label{fig:Ergebnisse_f}
 \end{figure}
 
-Exemplarisch wurde der Frequenzverlauf des Anstellwinkels $\alpha$ wieder in den Zeitbereich zurück transformiert. Das Ergebnis ist in Abbildung \ref{fig:Ergebnisse_t} dargestellt. Zusätzlich sind die Steuerverläufe von Elevator und Schub aufgetragen. Es ist gut zu erkennen das sogar die Ausschläge im Anstellwinkel abgeschätzt werden und der geschätzte Verlauf ein brauchbares Ergebnis liefert. Weniger realistisch sind allerdings die geschätzten Matrizen des Zustandsraummodells $A$ und $B$. Auch die Verläufe der anderen Größen werden nicht ganz so gut angenähert. Das Problem könnte hier bereits vor der Anwendung des Algorithmus liegen. Die gegebenen Flugdaten sind speziell für ein Schätzverfahren im Frequenzbereich unzureichend. Es ist vor allem interessant in welchem Frequenzbereich ein Steuereingang auf die Zustandsgrößen übertragen wird. Dies erkennt man dann wenn die Frequenzen, beipsielsweise in einem \textit{Frequency Sweep}, abgeflogen werden. Dies wäre eine mögliche Erklärung für die weniger guten Ergebnisse einiger Abschätzungen.
+Exemplarisch wurde der Frequenzverlauf des Anstellwinkels $\alpha$ wieder in den Zeitbereich zurücktransformiert. Das 
+Ergebnis ist in \cref{fig:Ergebnisse_t} dargestellt. Zusätzlich sind die Steuerverläufe von Elevator und Schub aufgetragen. 
+Es ist gut zu erkennen, dass sogar die Ausschläge im Anstellwinkel abgeschätzt werden und der geschätzte Verlauf ein 
+brauchbares Ergebnis liefert. Weniger realistisch sind allerdings die geschätzten Matrizen des Zustandsraummodells $A$ und 
+$B$. Auch die Verläufe der anderen Größen werden nicht ganz so gut angenähert. Das Problem könnte hier bereits vor der 
+Anwendung des Algorithmus liegen. Die gegebenen Flugdaten sind speziell für ein Schätzverfahren im Frequenzbereich 
+unzureichend. Es ist vor allem interessant, in welchem Frequenzbereich ein Steuereingang auf die Zustandsgrößen übertragen 
+wird. Dies erkennt man dann, wenn die Frequenzen, beipsielsweise in einem \textit{Frequency Sweep}, abgeflogen werden. Dies 
+wäre eine mögliche Erklärung für die weniger guten Ergebnisse einiger Abschätzungen.
 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[trim=100 0 100 0,clip,width=1\linewidth]{Ergebnisse_alpha_inv.png}
-	\caption{Zeitverlauf der Steuergrößen und der Zustandsgröße $\alpha$.}
+	\caption{Zeitverlauf der Steuergrößen und der Zustandsgröße $\alpha$}
 	\label{fig:Ergebnisse_t}
 \end{figure}
+
+\todo[inline]{Seitenbewegung erwähnen}
