--- a/0a_Abschlussbericht/src/vorbereitung.tex
+++ b/0a_Abschlussbericht/src/vorbereitung.tex
@@ -140,7 +140,7 @@ gut zu sehen.
 
 Für das Filter wird eine Übertragungsfunktion $f(s)$ auf die Messdaten vorwärts 
 angewandt, die Messdaten umgekehrt und die selbe Übertragungsfunktion noch 
-einmal verwendet. In Matlab ist dies in der Funktion \textit{filtfilt()} 
+einmal verwendet. In Matlab ist diese Vorgehensweise in der Funktion \textit{filtfilt()} 
 bereits implementiert. 
 
 \subsection{Wahl der Filterübertragungsfunktion}
