--- a/0a_Abschlussbericht/src/zusammenfassung.tex
+++ b/0a_Abschlussbericht/src/zusammenfassung.tex
@@ -29,7 +29,9 @@ zugrundeliegenden Modelle vereinfacht werden. In der Längsbewegung würde das b
 Anstellwinkelschwingung einerseits und die Phygoide andererseits zu erstellen und die Identifikationen getrennt durchzuführen.
 
 Weit aufwändiger, aber auch sehr vielversprechend, ist eine Identifikation im Zeitbereich mit einem nichtlinearen 
-Modell, welches aus verschiedenen zu identifizieren Untermodellen (z.B: Giermodell, Aerodynamisches Modell und Propeller) besteht. Als Beispiel werden die aerodynamische Kräfte separat aus den Beiwerten berechnet. Die Aufgabe der Systemidentifikation ist dann eine Abschätzung der Polaren aus den gemessenen Daten durchzuführen. .
+Modell, welches aus verschiedenen zu identifizieren Untermodellen (z.B: Giermodell, Aerodynamisches Modell und Propeller) besteht. 
+Als Beispiel werden die aerodynamische Kräfte separat aus den Beiwerten berechnet. 
+Die Aufgabe der Systemidentifikation ist dann eine Abschätzung der Polaren aus den gemessenen Daten durchzuführen.
 
 Im Frequenzbereich wurde mit der \textit{Output Error}-Methode nur der Fehler im gemessenen Signal berücksichtigt. Alternativ 
 wäre hier eine Betrachtung des Modellfehlers bei gleichzeitiger Vernachlässigung des Messfehlers möglich, wie es die 
