--- a/0a_Abschlussbericht/src/modell.tex
+++ b/0a_Abschlussbericht/src/modell.tex
@@ -1,8 +1,8 @@
-\chapter{Modelle}
-
-Im folgenden Abschnitt werden die der durchgeführten Systemidentifikationen zugrundeliegenden Modelle beschrieben, deren 
-Beiwerte zu bestimmen sind. Es handelt sich dabei um die bekannten linearisierten Modelle der Längs- und Seitenbewegung mit 
+\chapter{Modell}
+Im folgenden Abschnitt wird das der durchgeführten Systemidentifikationen zugrundeliegende Modell beschrieben, dessen 
+Beiwerte zu bestimmen sind. Es handelt sich dabei um das bekannte linearisierte Modell der Längsbewegung mit 
 den folgenden Annahmen \cite{Fichter2009}:
+
 \begin{itemize}
 	\item Linearisierung um den symmetrischen Horizontalflug ($ \gamma_0=0 $)
 	\item kein Auftrieb durch Nickrate ($ Z_q=0 $)
@@ -11,10 +11,11 @@ den folgenden Annahmen \cite{Fichter2009}:
 	\item kein Wind ($ \Delta\gamma = \Delta\theta-\Delta\alpha $)
 	\item horizontal eingebautes Triebwerk ($ i_F=0 $)
 \end{itemize} 
+
 Die Dynamiken können deshalb entkoppelt behandelt werden, was eine getrennte Identifikation der Längs- bzw. Seitenbewegung 
 ermöglicht. %\cite{Vorlesung2}
 
-\section{Längsbewegung}
+%\section{Längsbewegung}
 Der Zustand der Längsbewegung setzt sich zusammen aus dem Anstellwinkel $ \alpha $, der Nickrate $ q $, der 
 Anströmgeschwindigkeit $ V_A $ und dem Bahnwinkel $ \gamma $. Die zugehörigen Steuerungen umfassen den Höhenruderausschlag $ 
 \eta $ und den Schubdrosselgrad $ \delta_F $. Bis auf die Nickrate werden alle Größen als Abweichungen (Delta-Größen) vom 
@@ -51,39 +52,38 @@ jeweiligen Trimmpunkt (gekennzeichnet durch den Index "$ _0 $") beschrieben. Es 
 	\end{pmatrix}
 \end{equation}
 
-\section{Seitenbewegung}
-Das Modell der Seitenbewegung wird mit dem absoluten Zustand aufgestellt. Dies ist möglich, da es sich bei $ p $ und $ r $ 
-um Drehraten handelt. Außerdem sind die Trimmwerte für den Schiebe- und Rollwinkel sowie für die Steuereingaben jeweils $ 0 
-$:
-
-\begin{equation}\label{eq:seitenbewegung}
-	\begin{pmatrix}
-		\dot{r}\\
-		\dot{\beta}\\
-		\dot{p}\\
-		\dot{\phi}
-	\end{pmatrix} = 
-	\begin{pmatrix}
-		N_r & N_\beta             & N_p & 0\\
-		-1  & \frac{Y_\zeta}{V_0} & 0   & \frac{g}{V_0}\\
-		L_r & L_\beta             & L_p & 0\\
-		0   & 0                   & 1   & 0\\
-	\end{pmatrix} \cdot
-	\begin{pmatrix}
-		r\\
-		\beta\\
-		p\\
-		\phi
-	\end{pmatrix} + 
-	\begin{pmatrix}
-		N_\xi & N_\zeta\\
-		0 & \frac{Y_\zeta}{V_0}\\
-		L_\xi & L_\zeta\\
-		0 & 0\\
-	\end{pmatrix}\cdot
-	\begin{pmatrix}
-		\xi\\
-		\zeta
-	\end{pmatrix}
-\end{equation}
-
+%\section{Seitenbewegung}
+%Das Modell der Seitenbewegung wird mit dem absoluten Zustand aufgestellt. Dies ist möglich, da es sich bei $ p $ und $ r $ 
+%um Drehraten handelt. Außerdem sind die Trimmwerte für den Schiebe- und Rollwinkel sowie für die Steuereingaben jeweils $ 0 
+%$:
+%
+%\begin{equation}\label{eq:seitenbewegung}
+%	\begin{pmatrix}
+%		\dot{r}\\
+%		\dot{\beta}\\
+%		\dot{p}\\
+%		\dot{\phi}
+%	\end{pmatrix} = 
+%	\begin{pmatrix}
+%		N_r & N_\beta             & N_p & 0\\
+%		-1  & \frac{Y_\zeta}{V_0} & 0   & \frac{g}{V_0}\\
+%		L_r & L_\beta             & L_p & 0\\
+%		0   & 0                   & 1   & 0\\
+%	\end{pmatrix} \cdot
+%	\begin{pmatrix}
+%		r\\
+%		\beta\\
+%		p\\
+%		\phi
+%	\end{pmatrix} + 
+%	\begin{pmatrix}
+%		N_\xi & N_\zeta\\
+%		0 & \frac{Y_\zeta}{V_0}\\
+%		L_\xi & L_\zeta\\
+%		0 & 0\\
+%	\end{pmatrix}\cdot
+%	\begin{pmatrix}
+%		\xi\\
+%		\zeta
+%	\end{pmatrix}
+%\end{equation}
