--- a/0a_Abschlussbericht/src/vorbereitung.tex
+++ b/0a_Abschlussbericht/src/vorbereitung.tex
@@ -1,4 +1,4 @@
-\chapter{Vorbereitung der Daten}
+\chapter{Vorbereitung der Daten}\label{chapter:vorbereitung}
 Aus den Flugversuchen des e-Genius 1:3 liegt eine Fülle von Messdaten in verschiedenen .csv-Dateien vor. Im folgenden Kapitel 
 wird erklärt, wie diese vorbereitet werden, um sie für die anschließende Systemidentifikation zu verwenden.
 
@@ -99,11 +99,9 @@ Eine Ausnahme bilden hier die Drehraten $ p $, $ q $ und $ r $, bei denen keine 
 \section{Interpolation} %Florian
 Die Rohdaten werden von mehreren Sensoren mit unterschiedlichen Abtastraten geliefert. Da die Identifikationsalgorithmen die 
 Werte zu diskreten Zeitpunkten benötigen, ist es notwendig, einen einheitlichen Zeitvektor mit zugehörigen Eingangs- und 
-Zustandsvektoren zu generieren. Außerdem wird eine konstante Schrittweite gefordert.
-
+Zustandsvektoren zu generieren. Außerdem wird eine konstante Schrittweite gefordert.\par
 Die Abtastrate dieses Zeitvektors ist wichtig, da die Dimension des Optimierungsproblems und damit der 
 Rechenaufwand mit feinerer Diskretisierung steigt (im Zeitbereich). In dieser Arbeit wird der Zeitvektor des 
-
 
 \begin{figure}[h!]
 	\centering
@@ -114,16 +112,17 @@ Rechenaufwand mit feinerer Diskretisierung steigt (im Zeitbereich). In dieser Ar
 
 %fkt interp1
 
-\section{Filterung} %Florian
 
-Verrauschte Messdaten stellen für die Systemidentifikation eine Herausforderung dar. Numerische Ableitungen aus verrauschten Daten liefern in vielen Fällen keine sinnvolle Aussage. Neben aufwändigeren Ableitungsregeln bietet sich eine vorangehende Filterung der Daten an.
 
-Das Vorwärts-Rückwärtsfilter bietet den Vorteil, dass keine Phasenverschiebung 
-auftritt. Gerade wenn nur einzelne Signalteile gefiltert werden, beispielsweise 
-nur der Eingang, ist diese Eigenschaft unerlässlich. Der Nachteil ist, dass das 
-Filter nicht in Echtzeit verwendet werden kann, da immer die vollständige 
-Datenreihe vorliegen muss. Für eine Systemidentifikation ist dies jedoch keine 
-praktische Einschränkung.
+
+\section{Filterung} \label{section:filterung}%Florian
+Verrauschte Messdaten stellen für die Systemidentifikation eine Herausforderung dar. Numerische Ableitungen aus verrauschten 
+Daten liefern in vielen Fällen keine sinnvolle Aussage. Neben aufwändigeren Ableitungsregeln bietet sich eine vorangehende 
+Filterung der Daten an.\par
+Das Vorwärts-Rückwärtsfilter bietet den Vorteil, dass keine Phasenverschiebung auftritt. Gerade wenn nur einzelne Signalteile 
+gefiltert werden, beispielsweise nur der Eingang, ist diese Eigenschaft unerlässlich. Der Nachteil ist, dass das Filter nicht 
+in Echtzeit verwendet werden kann, da immer die vollständige Datenreihe vorliegen muss. Für eine Systemidentifikation ist 
+dies jedoch keine praktische Einschränkung.
 
 In \cref{fig:filterBsp} sind die Auswirkungen einer reinen Vorwärts- und einer Vorwärts-Rückwärtsfilterung auf die Phase 
 gut zu sehen.
@@ -137,14 +136,13 @@ gut zu sehen.
 
 
 \subsection{Ablauf}
-
 Für das Filter wird eine Übertragungsfunktion $f(s)$ auf die Messdaten vorwärts 
 angewandt, die Messdaten umgekehrt und die selbe Übertragungsfunktion noch 
 einmal verwendet. In Matlab ist diese Vorgehensweise in der Funktion \textit{filtfilt()} 
 bereits implementiert. 
 
-\subsection{Wahl der Filterübertragungsfunktion}
 
+\subsection{Wahl der Filterübertragungsfunktion}
 Es wurde ein quadriertes PT2-Glied gewählt, da so die Eckfrequenz direkt eingestellt werden kann. Die Eckfrequenz wurde zu $ 
 \SI{20}{\hertz} $ gewählt, damit das Rauschen unterdrückt wird, aber keine Information verloren geht.
 
