--- a/0a_Abschlussbericht/src/einleitung.tex
+++ b/0a_Abschlussbericht/src/einleitung.tex
@@ -5,9 +5,9 @@ Ziel des Projekts war die Identifikation der Parameter eines linearisierten Mode
 Flugmessdaten eines 1:3-Modells des Flugzeugs \textit{e-Genius}. Für die Seitenbewegung wurde ebenfalls eine 
 Systemidentifikation durchgeführt, aus Gründen der Übersichtlichkeit und Kürze wird diese aber in der Ausarbeitung 
 ausgelassen.\par
-Es werden Verfahren im Zeit- und im Frequenzbereich verwendet, um die Ergebnisse abschließend vergleichen zu können. Genauer 
+Es wurden Verfahren im Zeit- und im Frequenzbereich verwendet, um die Ergebnisse abschließend vergleichen zu können. Genauer 
 handelt es sich dabei im Zeitbereich um die \textit{Least Squares}-Methode sowie die Matrix-LSQ-Methode. Im Frequenzbereich 
-wird die \textit{Output Error}-Methode in Verbindung mit einem \textit{Newton-Raphson}-Algorithmus verwendet.\\
+wurde die \textit{Output Error}-Methode in Verbindung mit einem \textit{Newton-Raphson}-Algorithmus verwendet.\\
 
 Linearisierte Modelle spielen eine wichtige Rolle in der Regelungstechnik: Mit ihnen lässt sich eine lineare Regelung um 
 einen stationären Arbeits- bzw. Trimmpunkt entwickeln. Eine Schwierigkeit besteht dabei aber immer wieder darin, die 
